Hooking up JS, updating to new jekyll reqs

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,10 @@ github_username:  InsightsNetwork
 
 # Build settings
 markdown: kramdown
-plugins:
+plugins_dir:
   - jekyll-feed
+sass:
+  sass_dir: _sass
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
